WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34761
[Qt] GraphicsLayer: somtimes the item flickers at the end of an animation
https://bugs.webkit.org/show_bug.cgi?id=34761
Summary
[Qt] GraphicsLayer: somtimes the item flickers at the end of an animation
Noam Rosenthal
Reported
2010-02-09 09:57:05 PST
This is very difficult to test as it only reproduces "by chance" (a race condition)
Attachments
[GraphicsLayerQt] Small fix: let WebCore manage animation lifecycle, otherwise we get a flicker in some use-cases
(1.92 KB, patch)
2010-02-09 10:04 PST
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-02-09 10:04:18 PST
Created
attachment 48427
[details]
[GraphicsLayerQt] Small fix: let WebCore manage animation lifecycle, otherwise we get a flicker in some use-cases
Noam Rosenthal
Comment 2
2010-02-09 10:04:43 PST
Comment on
attachment 48427
[details]
[GraphicsLayerQt] Small fix: let WebCore manage animation lifecycle, otherwise we get a flicker in some use-cases oops, meant to set to r=?
Ariya Hidayat
Comment 3
2010-02-09 13:08:52 PST
Comment on
attachment 48427
[details]
[GraphicsLayerQt] Small fix: let WebCore manage animation lifecycle, otherwise we get a flicker in some use-cases LGTM.
WebKit Commit Bot
Comment 4
2010-02-10 23:14:39 PST
Comment on
attachment 48427
[details]
[GraphicsLayerQt] Small fix: let WebCore manage animation lifecycle, otherwise we get a flicker in some use-cases Clearing flags on attachment: 48427 Committed
r54644
: <
http://trac.webkit.org/changeset/54644
>
WebKit Commit Bot
Comment 5
2010-02-10 23:14:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug