WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -1117,7 +1117,8 @@ bool GraphicsLayerQt::addAnimation(const KeyframeValueList& values, const IntSiz
     else
         newAnim->start();
 
-    QObject::connect(newAnim, SIGNAL(finished()), newAnim, SLOT(deleteLater()));
+    // we don't need to manage the animation object's lifecycle:
+    // WebCore would call removeAnimations when it's time to delete.
 
     return true;
 }
@@ -1128,7 +1129,7 @@ void GraphicsLayerQt::removeAnimationsForProperty(AnimatedPropertyID id)
         if (*it) {
             AnimationQtBase* anim = static_cast<AnimationQtBase*>(it->data());
             if (anim && anim->m_webkitPropertyID == id) {
-                delete anim;
+                anim->deleteLater();
                 it = m_impl->m_animations.erase(it);
                 --it;
             }
